fixed toprow reactive spacings

--- a/website/assets/styles/style.scss
+++ b/website/assets/styles/style.scss
@@ -63,6 +63,16 @@ body{
     margin-left: auto;
     margin-right: auto;
   }
+  #topRow{
+    display: flex;
+    flex-direction: row;
+  }
+  #quoteAndStoneDiv{
+    max-width: 30%;
+  }
+  #docsThumbnail{
+    max-width: 18em;
+  }
 }
 @media screen and (max-width: 1100px)
 {
@@ -70,6 +80,13 @@ body{
     display: none;
   }
   #pageBody{
+    display: flex;
+    flex-direction: column;
+  }
+  #docsThumbnail{
+    max-width: 100%;
+  }
+  #topRow {
     display: flex;
     flex-direction: column;
   }
@@ -82,11 +99,6 @@ body{
 
 @media screen and (min-width: 900px) // Mobile
 {
-  #topRow{
-    display: flex;
-    flex-direction: row;
-  }
-
   #docsDiv {
     margin-left: auto;
     margin-right: auto;
@@ -95,6 +107,10 @@ body{
 
 @media screen and (max-width: 900px)
 {
+  #welcomeAndDocsDiv{
+    display: flex;
+    flex-direction: column;
+  }
   #topRow{
     display: flex;
     flex-direction: column;
@@ -180,8 +196,8 @@ body{
 #background{
   height: 100vh;
 }
-#quoteAndStoneDiv{
-  max-width: 30%;
+#welcomeCard{
+  height: fit-content;
 }
 
 /// Main pages
@@ -205,9 +221,12 @@ footer{
   width: 100vw; 
   height: 100vh;
 }
-#docsDiv, #docsThumbnail{
-  max-width: 18em;
-  max-height: 180px;
+#docsDiv {
+  max-width: fit-content;
+  height: fit-content;
+}
+#docsThumbnail{
+  max-height: 100%;
 }
 #quoteDiv{
   margin-bottom: 0;
